kubernetes/production/deploy-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: production
spec:
  replicas: 2
  selector:                  
    matchLabels:
      app: flask        
  template:
    metadata:
      labels:                
        app: flask      
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: flask
        image: registry.internal.uia.no/ikt206-g-25v-devops/group27/exam:latest
        imagePullPolicy: IfNotPresent
        command: ["python"]
        args: ["app.py"]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"  
          limits:
            cpu: "200m"
            memory: "256Mi"
