kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: production
  labels:
    env: production
    app: flask
spec:
  type: ClusterIP  # Internal access only, used by Ingress
  selector:
    app: flask
  ports:
    - name: http
      protocol: TCP
      port: 5000       # Exposed service port
      targetPort: 5000 # Container's Flask app port
